[tool.poetry]
name = "no-mans-ti"
version = "0.1.0"
description = ""
authors = ["bencap <bencap@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
